fixing clicking event on mobile

--- a/src/styles/pages/_destination.scss
+++ b/src/styles/pages/_destination.scss
@@ -16,7 +16,7 @@
 
 .grid-container--destination{
     --flow-space: 2rem;
-    margin-top: 21rem;
+    margin-top: 5rem;
     grid-template-areas: 
         'title'
         'image'
